<resources>
    <string name="app_name">O\'livraison</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <string name="Ajouter_livreur">Ajouter un Livreur</string>
    <string name="Liste_livreur">Liste des Livreurs</string>

    <string name="Liste_commandes">Liste des commandes </string>
    <string name="Ajouter_commande">Ajouter une commande</string>

    <string name="Set_server">Adresse serveur</string>
    <string name="Set_Setting">Mon profile</string>


    <string name="title_activity_login">Connexion</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
